--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,75 @@
 /* This is my CSS file!*/
 
 /*setting the map height by calling it by the object id*/
-#map { height: 800px;
+#title{height: 100px;
+      width: 100%;
+      font-family: Arial;
+      font-size: 100pt;
+      color: pink;
+      text-align: center;}
+
+#map { height: 1000px;
       width: 80%;;
-    display: inline-block;}
+      display: inline-block;}
 
 #panel{width: 16%;
         padding: 20px;
-      display:inline-block;
-    vertical-align: top;}
-.range-slider{
-  width: 90%;
-}
+        display:inline-block;
+        vertical-align: top;}
+/*.range-slider{
+        width: 90%;
+        height: 20pt;
+}*/
 #forward{
     width: 50%;
   float: right;
+  font-size: 30pt;
 }
 #reverse{
   width: 50%;
   float: left;
+  font-size: 30pt;
 }
-/*#slider{width: 80%}*/
-#popup-info{width:80%}
+
+#popup-info{width:80%;
+            font-size: 30pt; }
+
+#panel-info{
+            font-size: 40pt;
+}
+#container{width: 100%;
+            height:auto;
+                /*padding: 20px;*/
+                background-color: #FFFFFF;}
+                /*display:inline-block;*/
+                /*vertical-align: top;}*/
+#legend-control-container{width: 100%;
+                          height: 100%;
+                          background-color: white;
+}
+
+.sequence-control-container {
+    width: 350px;
+    height: 30px;
+    /*background-color: rgba(255,255,255,0.8);*/
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
+}
+
+.range-slider {
+    width: 300px;
+}
+.legend-control-container{
+  width:300px;
+  height: 250px;
+  background-color: #FFF;
+  opacity: 0.8;
+  padding: 10px;
+  line-height: 7px;
+  text-align: center;
+  color: grey;
+  font-size: 16px;
+
+}
