--- a/css/style.css
+++ b/css/style.css
@@ -12,22 +12,25 @@ body{
       text-align: center;
       }
 
-#map { height: 1000px;
-      width: 80%;;
+#map { height: 1500px;
+      width: 70%;;
       display: inline-block;}
 
-#panel{width: 16%;
+#panel{width: 25%;
         padding: 20px;
         display:inline-block;
         vertical-align: top;
-        background-color: #737373;
-        height:100%;}
-
-
+        height:100%;
+        color: #ffffff;
+        background-color: lightgrey;}
+#context{
+  font-family: Corbel;
+  font-size: 40px;
+}
 #forward{
     width: 50%;
-  float: right;
-  font-size: 30pt;
+    float: right;
+    font-size: 30pt;
 }
 #reverse{
   width: 50%;
@@ -36,32 +39,39 @@ body{
 }
 
 #popup-info{width:80%;
-            font-size: 30pt; }
+            font-size: 20pt;
+            font-family: Corbel; }
+.leaflet-popup-content {font-family: Corbel;
+                        font-size: 40pt
 
-#panel-info{
-            font-size: 40pt;
 }
+#sources{font-family: Corbel;
+            font-size: 20pt;
+
 #container{width: 100%;
             height:auto;
                 /*padding: 20px;*/
                 background-color: #FFFFFF;}
                 /*display:inline-block;*/
-                /*vertical-align: top;}*/
+                /vertical-align: top;}
+
 #legend-control-container{width: 100%;
                           height: 100%;
                           background-color: white;
 }
-.legend-circle{}
+.leaflet-control{ height: 90px;
+                  width:100px;
+                  font-size: 18px;}
 .sequence-control-container {
     width: 350px;
     height: 30px;
-    /*background-color: rgba(255,255,255,0.8);*/
     padding: 10px;
     line-height: 45px;
     text-align: center;
-    border: solid gray 1px;
+    border: solid grey 1px;
 }
-
+.leaflet-control-zoom{height:50px;
+                      width:50px;}
 
 .range-slider {
     width: 300px;
